[gd_scene load_steps=17 format=2]

[ext_resource path="res://entities/HealthDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/images/lights/spot.png" type="Texture" id=2]
[ext_resource path="res://actors/BlobMob.gd" type="Script" id=3]
[ext_resource path="res://data/sounds/hit_mob.wav" type="AudioStream" id=4]
[ext_resource path="res://data/images/sprites/teleporter.png" type="Texture" id=5]
[ext_resource path="res://data/sounds/death_mob.wav" type="AudioStream" id=6]
[ext_resource path="res://data/images/sprites/blob.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 21.2508

[sub_resource type="Animation" id=2]
resource_name = "Attack"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 0.554784, 1.62451 ),
"update": 0,
"values": [ 2.0, 0.0, 2.0 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 1 ),
"transitions": PoolRealArray( 1, 2.46229 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.2, 0.2, 0.2, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.1 ), Vector2( 1, 0.1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Light2D2:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 2.07053, 1.68179 ),
"update": 0,
"values": [ 0.0, 4.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.5

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.2, 0.2, 0.2, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D2:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 335.074

[sub_resource type="CircleShape2D" id=8]
radius = 43.9744

[sub_resource type="Animation" id=9]
resource_name = "Hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer2D2:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="BlobMob" type="KinematicBody2D" groups=[
"minimap_objects",
"mobs",
]]
z_index = 1
script = ExtResource( 3 )
speed = 100

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.2, 0.2, 0.2, 1 )
light_mask = 2
scale = Vector2( 1e-05, 0.1 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.2, 0.2, 0.2, 1 )
light_mask = 2
position = Vector2( 3, 0 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthDisplay" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -21 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 2
position = Vector2( -0.128037, 0.105028 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
texture_scale = 0.75
color = Color( 0.431373, 1, 0, 1 )
energy = 2.0
range_item_cull_mask = 2
shadow_color = Color( 0.435294, 1, 0.278431, 0 )
shadow_item_cull_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Die = SubResource( 3 )
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Spawn = SubResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[node name="Detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource( 7 )

[node name="Harm" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Harm"]
shape = SubResource( 8 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0
bus = "Effects"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 9 )

[node name="Light2D2" type="Light2D" parent="."]
light_mask = 2
texture = ExtResource( 2 )
texture_scale = 0.7
color = Color( 0, 1, 0.741176, 1 )
energy = 0.0
range_item_cull_mask = 2
shadow_item_cull_mask = 2
[connection signal="on_damage" from="." to="." method="_on_damage"]
[connection signal="on_death" from="." to="." method="_on_death"]
[connection signal="on_heal" from="." to="." method="_on_heal"]
[connection signal="on_health_changed" from="." to="." method="_on_health_changed"]
[connection signal="on_respawn" from="." to="." method="_on_respawn"]
[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_Detect_body_exited"]
[connection signal="body_entered" from="Harm" to="." method="_on_Harm_body_entered"]
[connection signal="body_exited" from="Harm" to="." method="_on_Harm_body_exited"]
